unpackaged/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>12-16 Weeks Advice</fullName>
            </value>
            <value>
                <fullName>6-8 Weeks Advice</fullName>
            </value>
            <value>
                <fullName>Account Currency Confirmation Requested</fullName>
            </value>
            <value>
                <fullName>Additional Information Requested</fullName>
            </value>
            <value>
                <fullName>Advice to Contact the Store</fullName>
            </value>
            <value>
                <fullName>ARN Provided</fullName>
            </value>
            <value>
                <fullName>Case escalated to customs</fullName>
            </value>
            <value>
                <fullName>Case escalated to French Technical support team</fullName>
            </value>
            <value>
                <fullName>Case Escalated to PTF Queries for Investigation</fullName>
            </value>
            <value>
                <fullName>Case Escalated to Refund Network Manager</fullName>
            </value>
            <value>
                <fullName>Case Forwarded to Finland</fullName>
            </value>
            <value>
                <fullName>Case Forwarded to Turkey</fullName>
            </value>
            <value>
                <fullName>Case Forwarded to UAE</fullName>
            </value>
            <value>
                <fullName>Cash Dispute</fullName>
            </value>
            <value>
                <fullName>Cash Refund Airport/City Center/TOPOS - No P2</fullName>
            </value>
            <value>
                <fullName>Cash Refund Airport/City Center/TOPOS - P2 received</fullName>
            </value>
            <value>
                <fullName>Cheque/Prepaid Card Cancelation Requested from PTF Queries</fullName>
            </value>
            <value>
                <fullName>Cheque/Prepaid Card was Sent to Customer Confirmation</fullName>
            </value>
            <value>
                <fullName>CIA</fullName>
            </value>
            <value>
                <fullName>Copy of Stamped Voucher Requested</fullName>
            </value>
            <value>
                <fullName>Credit/Debit Note</fullName>
            </value>
            <value>
                <fullName>Credit Card Confirmation Requested</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Customs Details Provided</fullName>
            </value>
            <value>
                <fullName>Customs Office Complaint</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Debit confirmation</fullName>
            </value>
            <value>
                <fullName>Debit Confirmation Due to no Customs Stamp</fullName>
            </value>
            <value>
                <fullName>Debit Confirmation Due to No Receipt</fullName>
            </value>
            <value>
                <fullName>Debit Confirmation Due to no Tax Free Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>