unpackaged/main/default/objects/Case/fields/Resolution_Reason__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Reason__c</fullName>
    <label>Resolution Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>