unpackaged/main/default/objects/Case/fields/Resolutions__c.field-meta.xml
<CustomField>
    <fullName>Resolutions__c</fullName>
    <description>This is for PL sales support</description>
    <label>Resolutions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account unlocked</fullName>
            </value>
            <value>
                <fullName>ARN provided</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Further details requested</fullName>
            </value>
            <value>
                <fullName>General information</fullName>
            </value>
            <value>
                <fullName>Internal Investigation</fullName>
            </value>
            <value>
                <fullName>Order status confirmed</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Paid and Positive</fullName>
            </value>
            <value>
                <fullName>Payment Issues</fullName>
            </value>
            <value>
                <fullName>Payment not completed</fullName>
            </value>
            <value>
                <fullName>Request forwarded</fullName>
            </value>
            <value>
                <fullName>Tax Free form not void</fullName>
            </value>
            <value>
                <fullName>Tax Free form voided</fullName>
            </value>
            <value>
                <fullName>Voucher Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>