unpackaged/main/default/objects/Case/fields/Response_Target__c.field-meta.xml
<CustomField>
    <fullName>Response_Target__c</fullName>
    <formula>IF(Response_Time__c &lt; 3, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>