unpackaged/main/default/objects/Case/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <formula>(First_Response__c - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>