unpackaged/main/default/objects/Case/fields/Sales_Currency__c.field-meta.xml
<CustomField>
    <fullName>Sales_Currency__c</fullName>
    <formula>Tax_Free_Form__r.Sales_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Currency</label>
    <type>Text</type>
</CustomField>