unpackaged/main/default/objects/Case/fields/Send_Auto_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Auto_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Auto Email</label>
    <type>Checkbox</type>
</CustomField>