unpackaged/main/default/objects/Case/fields/Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Subject_Line__c</fullName>
    <formula>Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Line</label>
    <type>Text</type>
</CustomField>