unpackaged/main/default/objects/Case/fields/Tax_Free_Form__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Free Form</label>
    <referenceTo>Tax_Free_Form__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>