unpackaged/main/default/objects/Case/fields/Terminal_ID__c.field-meta.xml
<CustomField>
    <fullName>Terminal_ID__c</fullName>
    <formula>POS_Solution__r.Terminal_ID_TID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terminal ID</label>
    <type>Text</type>
</CustomField>