unpackaged/main/default/objects/Case/fields/Terminal_Replacement_Required__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Replacement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminal Replacement Required</label>
    <type>Checkbox</type>
</CustomField>