unpackaged/main/default/objects/Case/fields/TF_System_Affected_Detail__c.field-meta.xml
<CustomField>
    <fullName>TF_System_Affected_Detail__c</fullName>
    <label>TF System Affected Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TF_Systems_Affected__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AXAPTA</fullName>
            </value>
            <value>
                <fullName>BI Reporting</fullName>
            </value>
            <value>
                <fullName>BIZTalk</fullName>
            </value>
            <value>
                <fullName>CSMS Refunds</fullName>
            </value>
            <value>
                <fullName>Data Warehouse</fullName>
            </value>
            <value>
                <fullName>Enterprise API</fullName>
            </value>
            <value>
                <fullName>eTF Admin</fullName>
            </value>
            <value>
                <fullName>eTF ATM - Airport</fullName>
            </value>
            <value>
                <fullName>eTF ATM - Border</fullName>
            </value>
            <value>
                <fullName>eTF ATM - Harbour</fullName>
            </value>
            <value>
                <fullName>eTF ATM - Merchant</fullName>
            </value>
            <value>
                <fullName>eTF CRM</fullName>
            </value>
            <value>
                <fullName>eTF Customs Interface</fullName>
            </value>
            <value>
                <fullName>eTF Merchant Terminal</fullName>
            </value>
            <value>
                <fullName>eTF MyAccount App</fullName>
            </value>
            <value>
                <fullName>eTF Refund</fullName>
            </value>
            <value>
                <fullName>eTF Reporting</fullName>
            </value>
            <value>
                <fullName>eTF Validation app &amp; Money exchange</fullName>
            </value>
            <value>
                <fullName>eTRS Singapore</fullName>
            </value>
            <value>
                <fullName>I&#39;ve added a detailed description</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>MCCP</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Orchestrator (TAX)</fullName>
            </value>
            <value>
                <fullName>PABLO</fullName>
            </value>
            <value>
                <fullName>PI Chanel</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>POS Batch Host</fullName>
            </value>
            <value>
                <fullName>POS Softpay</fullName>
            </value>
            <value>
                <fullName>POS Superpay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>