unpackaged/main/default/objects/Case/fields/Till_Provider__c.field-meta.xml
<CustomField>
    <fullName>Till_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Till Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Till Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Till Provider)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>