unpackaged/main/default/objects/Case/fields/Time_From_Stamped__c.field-meta.xml
<CustomField>
    <fullName>Time_From_Stamped__c</fullName>
    <description>Shows number of days from when stamped ro when case opened</description>
    <formula>DATEVALUE(CreatedDate) - Customs_Date_Stamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time From Stamped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>