unpackaged/main/default/objects/Case/fields/Tourist__c.field-meta.xml
<CustomField>
    <fullName>Tourist__c</fullName>
    <formula>IF(AccountId &lt;&gt; &quot;&quot;, Account.FirstName &amp; &quot; &quot; &amp; Account.LastName, Tax_Free_Form__r.Tourist_First_Name__c &amp; &quot; &quot; &amp; Tax_Free_Form__r.Tourist_Last_Name__c)</formula>
    <label>Tourist</label>
    <type>Text</type>
</CustomField>