unpackaged/main/default/objects/Case/fields/Tourist_Address__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Address__c</fullName>
    <formula>Tax_Free_Form__r.Tourist__r.BillingStreet &amp; BR() &amp; Tax_Free_Form__r.Tourist__r.BillingCity &amp; &quot;, &quot; &amp; Tax_Free_Form__r.Tourist__r.BillingState &amp; &quot; &quot; &amp; Tax_Free_Form__r.Tourist__r.BillingPostalCode &amp; BR() &amp; Tax_Free_Form__r.Tourist__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tourist Address</label>
    <type>Text</type>
</CustomField>