unpackaged/main/default/objects/Case/fields/Tourist_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Email_Address__c</fullName>
    <formula>Tax_Free_Form__r.Tourist_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tourist Email Address</label>
    <type>Text</type>
</CustomField>