unpackaged/main/default/objects/Case/fields/Tourist_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Final_Destination__c</fullName>
    <formula>Tax_Free_Form__r.Tourist_Final_Destination__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tourist Final Destination</label>
    <type>Text</type>
</CustomField>