unpackaged/main/default/objects/Case/fields/Tourist_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Passport_Number__c</fullName>
    <formula>Tax_Free_Form__r.Tourist_Passport_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tourist Passport Number</label>
    <type>Text</type>
</CustomField>