unpackaged/main/default/objects/Case/fields/Tourist_Premier_Pass_Id__c.field-meta.xml
<CustomField>
    <fullName>Tourist_Premier_Pass_Id__c</fullName>
    <formula>Tax_Free_Form__r.Tourist_Premier_Pass_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tourist Premier Pass Id</label>
    <type>Text</type>
</CustomField>