unpackaged/main/default/objects/Case/fields/Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed__c</fullName>
    <label>Work Completed</label>
    <type>DateTime</type>
</CustomField>