unpackaged/main/default/objects/Case/fields/Work_Started__c.field-meta.xml
<CustomField>
    <fullName>Work_Started__c</fullName>
    <label>Work Started</label>
    <type>DateTime</type>
</CustomField>