unpackaged/main/default/objects/Case/recordTypes/French_Sales_Support.recordType-meta.xml
<RecordType>
    <fullName>French_Sales_Support</fullName>
    <active>true</active>
    <businessProcess>Customer Service</businessProcess>
    <label>French Sales Support</label>
</RecordType>