unpackaged/main/default/objects/Case/recordTypes/Merchant_Support.recordType-meta.xml
<RecordType>
    <fullName>Merchant_Support</fullName>
    <active>true</active>
    <businessProcess>Customer Service</businessProcess>
    <label>Merchant Support</label>
</RecordType>