unpackaged/main/default/objects/Case/recordTypes/Merchant_Support_GB.recordType-meta.xml
<RecordType>
    <fullName>Merchant_Support_GB</fullName>
    <active>true</active>
    <businessProcess>Merchant Service</businessProcess>
    <label>Merchant Support GB</label>
</RecordType>