unpackaged/main/default/objects/Case/recordTypes/POS_Support.recordType-meta.xml
<RecordType>
    <fullName>POS_Support</fullName>
    <active>true</active>
    <businessProcess>POS Support</businessProcess>
    <label>POS Support</label>
</RecordType>