unpackaged/main/default/objects/Case/recordTypes/Sale_Support_PL.recordType-meta.xml
<RecordType>
    <fullName>Sale_Support_PL</fullName>
    <active>true</active>
    <businessProcess>Customer Service</businessProcess>
    <label>Sale Support PL</label>
</RecordType>