unpackaged/main/default/objects/Case/recordTypes/Saleforce_Support.recordType-meta.xml
<RecordType>
    <fullName>Saleforce_Support</fullName>
    <active>true</active>
    <businessProcess>Salesforce Support</businessProcess>
    <label>Saleforce Support</label>
</RecordType>