unpackaged/main/default/objects/Case/validationRules/Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution</fullName>
    <active>true</active>
    <description>Resolution is mandatory in order to close a case.</description>
    <errorConditionFormula>AND(TEXT(Resolution__c) = &quot;&quot;, TEXT(Status) = &quot;Closed&quot;,  RecordType.DeveloperName = &quot;Customer Support&quot;)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>You must enter a Resolution before closing a case.</errorMessage>
</ValidationRule>