unpackaged/main/default/objects/Case/validationRules/Spam_Emails.validationRule-meta.xml
<ValidationRule>
    <fullName>Spam_Emails</fullName>
    <active>true</active>
    <errorConditionFormula>SuppliedEmail = &quot;notificatione@rakuten.fr&quot;</errorConditionFormula>
    <errorMessage>This is Spam.</errorMessage>
</ValidationRule>