unpackaged/main/default/objects/Case/listViews/Aleks_Open_SF_Support_Cases.listView-meta.xml
<ListView>
    <fullName>Aleks_Open_SF_Support_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Salesforce_User__c</columns>
    <columns>NAME</columns>
    <columns>Change_Request_Approver__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>Case_Reason__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Due_Date__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Saleforce_Support</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
        <value>OutSystems</value>
    </filters>
    <filters>
        <field>Case_Owner_Name__c</field>
        <operation>startsWith</operation>
        <value>Aleks</value>
    </filters>
    <label>Aleks&#39; Open SF Support Cases</label>
    <sharedTo>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>