unpackaged/main/default/objects/Case/listViews/All_Open_Cases_Onboarding_IT.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases_Onboarding_IT</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Open Cases - Onboarding IT</label>
    <queue>Onboarding_IT</queue>
</ListView>