unpackaged/main/default/objects/Case/listViews/All_Open_Cases_POS_Support_Italy.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases_POS_Support_Italy</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.POS_Support</value>
    </filters>
    <label>All Open Cases POS Support</label>
    <sharedTo>
        <roleAndSubordinates>POS_Support_Management</roleAndSubordinates>
    </sharedTo>
</ListView>