unpackaged/main/default/objects/Case/listViews/German_CS_Case.listView-meta.xml
<ListView>
    <fullName>German_CS_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Resolved 3rd Line Support,Closed,Merged</value>
    </filters>
    <label>German CS</label>
    <queue>German_CS</queue>
    <sharedTo>
        <role>Customer_Service</role>
    </sharedTo>
</ListView>