unpackaged/main/default/objects/Case/listViews/Merchant_Services_CH_Case.listView-meta.xml
<ListView>
    <fullName>Merchant_Services_CH_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Merchant Services CH</label>
    <queue>Merchant_Services_CH</queue>
    <sharedTo>
        <role>Austria_Switzerland_Sales_Support</role>
        <role>Germany_Sales_Support</role>
    </sharedTo>
</ListView>