unpackaged/main/default/objects/Case/listViews/Merchant_Services_DE_Case.listView-meta.xml
<ListView>
    <fullName>Merchant_Services_DE_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Merchant Services DE</label>
    <language>en_US</language>
    <queue>Merchant_Services_DE</queue>
    <sharedTo>
        <group>Germany_All_Users</group>
    </sharedTo>
</ListView>