unpackaged/main/default/objects/Case/listViews/Merchant_Services_ES_Case.listView-meta.xml
<ListView>
    <fullName>Merchant_Services_ES_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Merchant Services ES</label>
    <language>en_US</language>
    <queue>Merchant_Services_ES</queue>
    <sharedTo>
        <role>Customer_Service_ES</role>
        <role>POS_Support_ES</role>
        <role>POS_Support_Management</role>
        <role>South_west_Europe_Management</role>
        <role>South_west_Europe_Marketing</role>
        <role>Spain_International_Accounts</role>
        <role>Spain_Management</role>
        <role>Spain_National_Accounts</role>
        <role>Spain_Sales_Support</role>
    </sharedTo>
</ListView>