unpackaged/main/default/objects/Case/listViews/Merchant_Services_FR_Case.listView-meta.xml
<ListView>
    <fullName>Merchant_Services_FR_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Merchant Services FR</label>
    <queue>Merchant_Services_FR</queue>
    <sharedTo>
        <roleAndSubordinates>France_Management</roleAndSubordinates>
    </sharedTo>
</ListView>